# parsing-with-haskell-parser-combinators

./: .gitignore  README.md  parsing-with-haskell-parser-combinators.cabal
docs/: _build-docs.sh  _template.html5  index.html
src/: srt-file-parser.hs  version-number-parser.hs
test-input/: gifcurry-version-output.txt  imagemagick-version-output.txt  subtitles.srt
