name:               parsing-with-haskell-parser-combinators
version:            0.0.0.0
homepage:           https://github.com/lettier/parsing-with-haskell-parser-combinators
author:             David Lettier
copyright:          2019 David Lettier
license:            BSD3
build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/lettier/parsing-with-haskell-parser-combinators

executable version-number-parser
  main-is: src/version-number-parser.hs
  build-depends:
      base >=4.7 && <5
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable srt-file-parser
  main-is: src/srt-file-parser.hs
  build-depends:
      base >=4.7 && <5
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
